fix: popover is not nicely displayed on small resolutions
When there is only one or two tasks displayed in the roadmap widgets,
there is not enough room to let popper.js (the underlying library that
is used for placements) display the popover.

Furthermore it has been brought to our attention that there
might be some flickering.

By upgrading the library [to its latest version][0], the display seems
te be a little bit better.

There is still weird behavior though, for example when a task bar is too
long for the scrolling area, the popover might be hidden. It will be
managed in a dedicated commit.

Part of story #19734: have a Roadmap widget on dashboard

[0]: https://popper.js.org/docs/v2/migration-guide/

--- a/plugins/roadmap/themes/_popover.scss
+++ b/plugins/roadmap/themes/_popover.scss
@@ -20,12 +20,37 @@
 @use '../../../src/themes/tlp/src/scss/variables/colors/swatch-colors';
 
 .roadmap-gantt-task-popover {
-    &.tlp-popover {
-        margin: -5px;
+    &.tlp-popover.tlp-popover-shown {
+        transform: translateY(-7px);
+
+        &.roadmap-gantt-task-milestone-popover {
+            transform: translateY(-9px);
+        }
     }
 
     > .roadmap-gantt-task-popover-arrow {
-        border-color: var(--tlp-theme-dark-background-color-darker);
+        background: var(--tlp-theme-dark-background-color-darker);
+    }
+
+    &.tlp-popover[data-popper-placement='left-end'],
+    &.tlp-popover[data-popper-placement='right-end'] {
+        &.tlp-popover-shown {
+            transform: translateY(7px);
+        }
+
+        > .roadmap-gantt-task-popover-arrow {
+            background: var(--tlp-theme-dark-background-color);
+        }
+    }
+
+    &.tlp-popover[data-popper-placement^='top'] {
+        &.tlp-popover-shown {
+            transform: translateY(0);
+        }
+
+        > .roadmap-gantt-task-popover-arrow {
+            background: var(--tlp-theme-dark-background-color);
+        }
     }
 }
 
